# otus-cpp-prof-hw-07-bulk

./: CMakeLists.txt  Doxyfile  collector.cpp  collector.h  file_logger.cpp  file_logger.h  graph_legend.html  gtest_input.cpp  index.html  interpreter.h  main.cpp  run_input.h
.github/workflows/: release.yml
